--- a/Resume/style.css
+++ b/Resume/style.css
@@ -13,7 +13,7 @@ body{
     }
 
 li{
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family:1 'Open Sans', Arial, sans-serif;
   font-size: 1em;
   color: #444;
 }
