Changing headings to div
Changed h3 and h4 to divs and adding a few new CSS stylings.

--- a/Resume/style.css
+++ b/Resume/style.css
@@ -55,12 +55,12 @@ strong{
   min-width: 300px;
 }
 
-h3{
+.jobtitle{
   font-weight: 600;
   font-size: 2em;
 }
 
-h4{
+.organization{
   font-weight: 400;
   font-size: 1.5em;
 }
