--- a/Resume/style.css
+++ b/Resume/style.css
@@ -30,6 +30,7 @@ li{
   margin: 0 auto;
 }
 
+/*paragraph info*/
 .description{
   font-family: 'Open Sans', Arial, sans-serif;
   font-size: 1em;
@@ -40,6 +41,7 @@ li{
   margin-right: 0px;
 }
 
+/*beginning my name*/
 #title{
   text-transform: uppercase;
   font-size: 2em;
@@ -52,6 +54,7 @@ li{
   margin-left: 0;
 }
 
+/*headings for the job parts*/
 .sectionheader{
   font-size: 1.5em;
   text-transform: uppercase;
@@ -90,6 +93,7 @@ img{
   display: none;
 }
 
+/*for the contact information*/
 .menu{
   margin: 0;
   padding: 0;
@@ -111,6 +115,8 @@ img{
   margin-right: 0;
 }
 
+
+/*for the mission statement*/
 .top{
   width: 60%;
   min-width: 300px;
