--- a/ThompsonLayout/stylesheet.css
+++ b/ThompsonLayout/stylesheet.css
@@ -11,7 +11,7 @@ body, html {
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("uae-mars2.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/uae-mars2.jpg");
 
   /* Set a specific height */
   height: 50%;
@@ -27,7 +27,7 @@ body, html {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -51,4 +51,28 @@ h1 {
 
 img {
   width: 50%;
+  text-align: center;
+}
+
+blockquote {
+  font-size: 24px;
+  font-family: Helvetica, sans-serif;
+  font-style: italic;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: black;
+  margin-left: 50px;
+  padding-left: 15px;
+  border-left: 4px solid #ccc;
+}
+
+.captions {
+  font-size: 10px;
+  font-family: Helvetica, sans-serif;
+}
+
+.location {
+  font-size: 10px;
+  font-family: Helvetica, sans-serif;
+  font-style: italic;
 }
