--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -20,7 +20,7 @@ p {
 
 /* The hero image */
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/rapinoe6.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/rapinoe6.jpg");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
