--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -18,23 +18,20 @@ p {
   font-family: Helvetica, Arial;
 }
 
-/* The hero image */
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/rapinoe6.jpg");
-  height: 50%;
-  background-position: center;
+.bgimage {
+  width:100%;
+  height:500px;
+  background: url('images/rapinoe6.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  background-position: center;
+  background-size:cover;
+  background-attachment: fixed;
 }
-
-.hero-text {
+.bgimage h1 {
+  margin-top: 60px;
+  color: black;
+  text-shadow:2px 2px white;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
 }
 
 img {
