--- a/Resume/style.css
+++ b/Resume/style.css
@@ -1,6 +1,6 @@
 /*styles for my resume*/
 
-#container {
+#content {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
@@ -15,7 +15,7 @@ body{
     }
 
 #name{
-  font-size: 3.5em;
+  font-size: 5em;
   text-align: center;
   text-transform: uppercase;
   width: 60%;
@@ -24,6 +24,7 @@ body{
   font-family: 'Cormorant Garamond', serif;
   color: white;
   text-shadow: 4px 3px #EDCFEE;
+  padding: 0;
 }
 
 /*paragraph info*/
@@ -40,7 +41,7 @@ body{
 /*beginning my name*/
 #title{
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 3em;
   font-weight: 600px;
   text-align: center;
   margin-top: 5px;
@@ -54,21 +55,19 @@ body{
 
 /*headings for the job parts*/
 .sectionheader{
-  font-size: 1.5em;
+  font-size: 3em;
   text-transform: uppercase;
-  background-color: #33485e;
-  color: white;
+  font-family: 'Cormorant Garamond', serif;
+  color: #5F6B25;
   font-weight: 400;
-  margin-bottom: 10px;
-  margin-top: 20px;
-  margin-left: 0px;
-  margin-right: 0px;
+  margin: 0 auto;
   width: 70%;
   min-width: 300px;
+  text-align: center;
 }
 
 .jobtitle{
-  font-weight: 600;
+  font-weight: 600px;
   font-size: 2em;
 }
 
@@ -124,6 +123,8 @@ img{
   font-family: Arial;
 }
 
+
+/*contact info*/
 .contact-info{
   color: #5F6B25;
   margin: 0px 0px 0px 70px;
@@ -156,4 +157,61 @@ a:visited {
 .bgimage title{
   color:white;
   filter: brightness(75%)
+}
+
+/*for the circle/experience section*/
+.circle {
+  position: relative;
+  display: block;
+  margin: 4em 4em 4em 4em;
+  background-color: transparent;
+  color: #EDCFEE;
+  text-align: center;
+  width: 300px;
+  height: 300px;
+}
+
+.circle:after {
+  display: block;
+  padding-bottom: 100%;
+  width: 100%;
+  height: 0%;
+  border-radius: 50%;
+  background-color: #5F6B25;
+  content: "";
+}
+
+.circle__inner {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 1em;
+  font-family: Arial;
+}
+
+.circle__wrapper {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.circle__content {
+  display: table-cell;
+  padding: .5em;
+  vertical-align: middle;
+}
+
+@media (min-width: 480px) {
+  .circle__content {
+    font-size: 2em;
+  }
+}
+
+@media (min-width: 768px) {
+  .circle__content {
+    font-size: 4em;
+  }
 }
