--- a/Resume/style.css
+++ b/Resume/style.css
@@ -14,6 +14,8 @@ body{
   color: #444;
     }
 
+
+/*masterhead font stuff for title*/
 #name{
   font-size: 5em;
   text-align: center;
@@ -38,7 +40,7 @@ body{
   margin-right: 0px;
 }
 
-/*beginning my name*/
+/*beginning journalism*/
 #title{
   text-transform: uppercase;
   font-size: 3em;
@@ -86,10 +88,6 @@ body{
   margin-right: 0px;
 }
 
-img{
-
-}
-
 /*for the contact information*/
 .menu{
   margin: 0;
@@ -105,11 +103,18 @@ img{
   margin-right: 0;
 }
 
-#do{
+.do{
   margin-top: : 5px;
   margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
+  padding: 10px;
+  border: 5px;
+  background-color: #5F6B25;
+  color: #EDCFEE;
+  border-radius: 15px 15px 15px 15px;
+  text-align: center;
+
 }
 
 
@@ -163,7 +168,7 @@ a:visited {
 .circle {
   position: relative;
   display: block;
-  margin: 4em 4em 4em 4em;
+  margin: 0 auto;
   background-color: transparent;
   color: #EDCFEE;
   text-align: center;
@@ -188,7 +193,7 @@ a:visited {
   left: 0;
   width: 100%;
   height: 100%;
-  font-size: 1em;
+  font-size: .5em;
   font-family: Arial;
 }
 
@@ -200,8 +205,7 @@ a:visited {
 
 .circle__content {
   display: table-cell;
-  padding: .5em;
-  vertical-align: middle;
+  padding: 3em 0em 1em 0em;
 }
 
 @media (min-width: 480px) {
@@ -214,4 +218,20 @@ a:visited {
   .circle__content {
     font-size: 4em;
   }
+}
+
+
+.col-md-6 {
+  margin: 0 auto;
+}
+
+.circle-date {
+  padding: 5em 0em 0em 0em;
+  text-align: center;
+}
+
+
+/*Education section*/
+img {
+  margin: 0;
 }
