--- a/climate-crisis-story/html-frame/style.css
+++ b/climate-crisis-story/html-frame/style.css
@@ -97,6 +97,20 @@ img {
   margin: 0 auto;
 }
 
+/*pullquote*/
+.quote {
+  font-size: 3em;
+  font-weight: 500;
+  text-align: center;
+  border-top: solid red;
+  border-bottom: solid red;
+}
+
+.quote-attribution{
+  font-style: italic;
+  text-align: center;
+  margin: 0 auto;
+}
 
 /*Caption for photos*/
 .caption {
@@ -119,8 +133,8 @@ footer {
   text-align: center;
   background-color: black;
   color: white;
+  margin: 0 auto;
 }
-
 
 
 /* Media Queries */
