--- a/climate-crisis-story/html-frame/style.css
+++ b/climate-crisis-story/html-frame/style.css
@@ -136,6 +136,35 @@ footer {
   margin: 0 auto;
 }
 
+/*sidebar*/
+.wrapper {
+  align-items: stretch;
+  display: flex;
+  width: 100%;
+}
+
+#sidebar {
+  min-width: 250px;
+  max-width: 250px;
+  min-height: 100vh;
+}
+
+#sidebar.active {
+  margin: left;
+}
+
+a[data-toggle="collapse"] {
+  position: relative;
+}
+
+.dropdown-toggle::after {
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
+
 
 /* Media Queries */
 
