--- a/final/style.css
+++ b/final/style.css
@@ -42,3 +42,52 @@ footer {
 .row {
   text-align: center;
 }
+
+/* media queries */
+
+
+@media(max-width:800px) {
+.hero-hed {
+  font-size:3em;
+}
+
+}
+
+
+@media(max-width:550px) {
+  .hero-hed {
+    font-size:1.5em;
+  }
+
+  p {
+    padding-left:20px;
+    padding-right:10px;
+  }
+
+  .chapter-head {
+    font-size:1.25em;
+  }
+
+  .intro-text {
+    font-size:1.25em;
+  }
+
+  .hed {
+    font-size:2em;
+  }
+
+  .hero-text{
+    font-size:2em;
+    top:50%;
+  }
+
+  .quote {
+    display:none;
+    font-size:1em;
+  }
+
+.text-box {
+  width:100%;
+}
+
+}
