--- a/final/style.css
+++ b/final/style.css
@@ -1,3 +1,7 @@
+.container {
+  text-align:center;
+}
+
 .headline {
   font-size: 3em;
   font-weight: 700;
@@ -16,6 +20,22 @@
   font-size: 2em;
   font-family:'Montserrat', sans-serif;
 }
+
+/* page topper */
+.bgimage {
+  width:100%;
+  height:500px;
+  background: url('images/simone_header.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  background-attachment: fixed;
+}
+.bgimage h1 {
+  margin-top: 60px;
+  color: black;
+  text-shadow:2px 2px white;
+  text-align: center;
 
 p {
   font-size: 1em;
