--- a/final/style.css
+++ b/final/style.css
@@ -47,8 +47,13 @@ p {
 }
 
 img {
-  width: 400px;
+  max-width: 100%
   margin: 0 auto;
+}
+
+.image {
+  height: 400px
+  padding-right: 20px;
 }
 
 .source {
