--- a/final/style.css
+++ b/final/style.css
@@ -18,11 +18,6 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.chapter {
-  font-size: 2em;
-  font-family:'Montserrat', sans-serif;
-}
-
 /* page topper */
 .bgimage {
   width:100%;
@@ -60,6 +55,21 @@ img {
   font-style: italic;
 }
 
+/*pullquote*/
+.quote {
+  font-size: 3em;
+  font-weight: 500;
+  text-align: center;
+  border-top: solid red;
+  border-bottom: solid red;
+}
+
+.quote-attribution{
+  font-style: italic;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 2em;
+}
 
 footer {
   text-align: center;
