--- a/final/style.css
+++ b/final/style.css
@@ -17,7 +17,27 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-/* page topper */
+/*navbar and logo*/
+.red {
+  font-family: 'Montserrat', sans-serif;
+  color: red;
+  font-size: 1em;
+  font-weight: 300;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.nav-logo {
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 1em;
+  font-weight: 300;
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+/* old page topper
 .bgimage {
   width:100%;
   height:900px;
@@ -33,6 +53,58 @@
   color: white;
   font-size: 5em;
   text-align: center;
+}
+
+.header_caption {
+  left: 10px;
+  bottom 10px;
+  position: absolute;
+  color: white;
+}
+*/
+/*splash*/
+.hero-image {
+  width: 100%;
+}
+
+.hero-head {
+  font-family; font-family: 'Cormorant Garamond', serif;
+  margin: 0 auto;
+  font-size: 6em;
+  font-weight: 700;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.hero-sub {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  left: 10px;
+  bottom: 10px;
+  position: absolute;
+  color: white;
+}
+
+.hero-container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.overlay {
+  position: absolute;
+  width:100%;
+  top: 20%;
+  background:#000;
+  opacity:.7;
+}
+
+.headline {
+  font-size: 3em;
+  font-weight: 700;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /*content*/
@@ -117,6 +189,11 @@ footer {
 @media(max-width:550px) {
   .hero-hed {
     font-size:1.5em;
+  }
+
+  .header_caption {
+    left: 10px;
+    bottom: 10px;
   }
 
   p {
